samples/_failures_safe/1761512719_83446c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4379b513.c: In function ‘main’:
./samples/SAFE/__tmp_4379b513.c:199:9: error: expected expression at end of input
  199 |         fprintf(stderr,
      |         ^~~~~~~
./samples/SAFE/__tmp_4379b513.c:199:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4379b513.c:199:9: error: expected declaration or statement at end of input
